--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
+    "@types/node": "^22.13.1",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.3",
     "typescript": "^5.0.0",
